# SLS

./: .gitignore  Cargo.toml  README.md  SDT.sln  SLS.sln  SnaPDataTransfer.sln
.github/workflows/: tests.yml
SDT/: ClientHandler.cs  ClientsHandler.cs  IClientsHandler.cs  IServersHandler.cs  LobbyDto.cs  LobbyInfo.cs  Program.cs  ProjectContext.cs  SDT.csproj  ServerHandler.cs  ServersHandler.cs
SDT.Tests/: ClientsTest.cs  CommandsTests.cs  SDT.Tests.csproj  ServerTests.cs  Tools.cs
SDT.Tests/Grpc/: ClientsTests.cs  ServersTests.cs
SDT.Tests/TcpIp/: ClientsTest.cs  ClientsTests.cs  CommandsTests.cs  ServerTests.cs  Tools.cs
SDT/Clients/: ClientsHandler.cs
SDT/Commands/: Command.cs  CommandParser.cs  CommandType.cs
SDT/Grpc/: ClientsHandlerService.cs  LobbyInfoParser.cs  ServersHandlerService.cs
SDT/Grpc/Protos/: clientsHandler.proto  serversHandler.proto
SDT/Servers/: ServersHandler.cs
SDT/TcpIp/: ClientsHandler.cs  ServersHandler.cs
SDT/TcpIp/Commands/: Command.cs  CommandParser.cs  CommandType.cs
SLS/: IClientsHandler.cs  IServersHandler.cs  LobbyDto.cs  Program.cs  ProjectContext.cs  SLS.csproj
SLS.Tests/: SLS.Tests.csproj  Tools.cs
SLS.Tests/Grpc/: ClientsTests.cs  ServersTests.cs
SLS.Tests/TcpIp/: ClientsTests.cs  CommandsTests.cs  ServerTests.cs
SLS/Grpc/: ClientsHandlerService.cs  LobbyInfoParser.cs  ServersHandlerService.cs
SLS/TcpIp/: ClientsHandler.cs  ServersHandler.cs
SnaPDataTransfer/: ClientHandler.cs  Program.cs  ServerHandler.cs  SnaPDataTransfer.csproj
src/: lobby.rs  main.rs
src/handlers/: client.rs  server.rs
(+5 files in other folders)
